Comentar eslintconfig e criar funcionalidade de destacar os times que estão jogando

--- a/src/components/ListOfGames/styles.css
+++ b/src/components/ListOfGames/styles.css
@@ -7,3 +7,8 @@ ul {
     list-style-type: none;
     border: 1px solid black;
 }
+
+.isPlaying {
+    background-color: red;
+    border: 5px solid black;
+}
