--- a/src/components/ModalWhoLost/styles.css
+++ b/src/components/ModalWhoLost/styles.css
@@ -6,7 +6,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    position: absolute;
+    position: fixed;
   }
   
   .centered {
@@ -18,112 +18,73 @@
   
   .modal {
     width: 250px;
-    height: 170px;
-    background: white;
+    min-height: 300px;
     color: white;
     z-index: 10;
     border-radius: 16px;
-    box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    
   }
   
   .modalHeader {
     height: 50px;
-    background: white;
+    background: var(--main-green);
     overflow: hidden;
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 1rem;
   }
   
   .heading {
-    margin: 0;
-    padding: 10px;
-    color: #2c3e50;
-    font-weight: 500;
-    font-size: 18px;
+    color: var(--dark-green);
+    background-color: var(--white);
+    font-weight: bold;
+    font-size: 17px;
     text-align: center;
-  }
-  
-  .modalContent {
-    padding: 10px;
-    font-size: 14px;
-    color: #2c3e50;
-    text-align: center;
+    border-radius: 16px;
+    padding: 0.3rem 1rem;
+    
   }
   
   .modalActions {
-    position: absolute;
-    bottom: 2px;
-    margin-bottom: 10px;
-    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 1rem;
+    margin: 0 .5rem;
+    gap: .3rem;
+    background-color: var(--main-green);
+
   }
-  
-  .actionsContainer {
+
+  .teamPlaying {
+    background-color: #fff;
+    color: var(--dark-green);
+    border-radius: 4px;
+    padding: .2rem;
+    cursor: pointer;
+  }
+
+  .teamPlaying p {
+    background-color: white;
+  }
+
+  .selected {
+    background-color: #acd1af;
+    color: #000;
+    border: 3px solid #479436;
+  }
+
+  .selected p {
+    background-color: #acd1af;
+  }
+
+  .test {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: black;
+    justify-content: center;
   }
-  
-  .closeBtn {
-    cursor: pointer;
-    font-weight: 500;
-    padding: 4px 8px;
-    border-radius: 8px;
-    border: none;
-    font-size: 18px;
-    color: #2c3e50;
-    background: white;
-    transition: all 0.25s ease;
-    box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.06);
-    position: absolute;
-    right: 0;
-    top: 0;
-    align-self: flex-end;
-    margin-top: -7px;
-    margin-right: -7px;
-  }
-  
-  .closeBtn:hover {
-    box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
-    transform: translate(-4px, 4px);
-  }
-  
-  .deleteBtn {
-    margin-top: 10px;
-    cursor: pointer;
-    font-weight: 500;
-    padding: 11px 28px;
-    border-radius: 12px;
-    font-size: 0.8rem;
-    border: none;
-    color: #fff;
-    background: #ff3e4e;
-    transition: all 0.25s ease;
-  }
-  
-  .deleteBtn:hover {
-    box-shadow: 0 10px 20px -10px rgba(255, 62, 78, 0.6);
-    transform: translateY(-5px);
-    background: #ff3e4e;
-  }
-  
-  .cancelBtn {
-    margin-top: 10px;
-    cursor: pointer;
-    font-weight: 500;
-    padding: 11px 28px;
-    border-radius: 12px;
-    font-size: 0.8rem;
-    border: none;
-    color: #2c3e50;
-    background: #fcfcfc;
-    transition: all 0.25s ease;
-  }
-  
-  .cancelBtn:hover {
-    box-shadow: none;
-    transform: none;
-    background: whitesmoke;
-  }
-  
-  
