--- a/src/components/ListOfGames/styles.css
+++ b/src/components/ListOfGames/styles.css
@@ -13,6 +13,7 @@
     padding: 0.4rem;
     background-color: var(--white);
     border-radius: 4px;
+    cursor: pointer;
 }
 
 .list-of-games  li {
